syntax = "proto3";
package unary;
option go_package = "./unary/unarypb";

message Attack {
    uint32 damage = 1;
}

message Boss {
    uint32 id = 1;
    int32 health = 2;
}

message AttackBossRequest {
    Boss boss = 1;
    Attack attack = 2;
}

message AttackBossResponse {
    Boss boss = 1;
}

service UnaryService {
    rpc AttackBoss(AttackBossRequest) returns (AttackBossResponse) {};
}

